[package]
name = "peace-performance-python"
version = "0.7.0"
authors = ["Pure-Peace <940857703@qq.com>"]
edition = "2018"

[lib]
name = "peace_performance_python"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# You can choose whether to be asynchronous or not
# And other features
default = [
    "osu",
    "taiko",
    "fruits",
    "mania",
    "async_tokio",
    "all_included",
]

peace_edition = ["peace-performance/peace_edition"]
relax_nerf = ["peace-performance/relax_nerf"]

# game modes
osu = ["peace-performance/osu"]
taiko = ["peace-performance/taiko"]
fruits = ["peace-performance/fruits"]
mania = ["peace-performance/mania"]

# osu!standard version
all_included = ["peace-performance/all_included"]
no_leniency = ["peace-performance/no_leniency"]
no_sliders_no_leniency = ["peace-performance/no_sliders_no_leniency"]


# Features
sync = []
async_tokio = [
    "tokio",
    "peace-performance/async_tokio",
    "pyo3-asyncio/tokio-runtime",
]
async_std = [
    "async-std",
    "peace-performance/async_std",
    "pyo3-asyncio/async-std-runtime",
]


[dependencies]
pyo3 = { version = "0.14.1", features = ["extension-module"] }
log = "0.4"
timed = "0.2.1"
pretty_env_logger = "0.4.0"


# Async optional
pyo3-asyncio = { git = "https://github.com/Pure-Peace/pyo3-asyncio.git", optional = true }
tokio = { version = "1.9.0", optional = true }
async-std = { version = "1.9", optional = true }


# Peace-performance
peace-performance = { version = "0.3.0", default-features = false }

[package.metadata.maturin]
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 0 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

# Don't optimize the release build (built by maturin / tox) for this module, as
# it's a test module.
# [profile.release]
# debug = true
# opt-level = 0


# link-time-optimization
# Enabling makes the compiled program size smaller and higher performance, 
# but it will extend compilation time.
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
