[package]
name = "peace-performance-python"
version = "2.0.0"
authors = ["Pure-Peace <940857703@qq.com>"]
edition = "2021"

[lib]
name = "peace_performance_python"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# You can choose whether to be asynchronous or not
# And other features
default = ["async_tokio"]

# Features
sync = []
async_tokio = ["tokio", "rosu-pp/async_tokio", "pyo3-asyncio/tokio-runtime"]
async_std = ["async-std", "rosu-pp/async_std", "pyo3-asyncio/async-std-runtime"]

# Irrelevant Features
rust_logger = ["log", "timed", "pretty_env_logger"]


[dependencies]
rosu-pp = { version = "0.8", default-features = false }
pyo3 = { version = "0.16", features = ["extension-module"] }
paste = "1.0"

# Rust logger optional
log = { version = "0.4", optional = true }
timed = { version = "0.2.1", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }

# Async optional
pyo3-asyncio = { version = "0.16", optional = true }
tokio = { version = "1.20", optional = true }
async-std = { version = "1.12", optional = true }


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
