[build-system]
requires = [
    "maturin>=0.11,<0.13",
    "setuptools",
    "setuptools-rust",
    "toml",
    "wheel",
]


[project]
name = "peace-performance-python"
version = "2.0.0"
readme = "README.md"
description = "Rust binding for python. To calculate star ratings and performance points for all osu! gamemodes, and quickly parse Beatmap into python objects."
keywords = [
    "rust",
    "peace",
    "osu",
    "pp",
    "beatmap",
    "parse",
    "rosu-pp",
    "peace-performance",
]
authors = [{ email = "abner666666@foxmail.com" }, { name = "Pure-Peace" }]
maintainers = [{ email = "abner666666@foxmail.com" }, { name = "Pure-Peace" }]
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["typing_extensions"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov[all]",
    "setuptools_rust",
    "maturin",
    "pytest-benchmark",
    "pytest-benchmark[histogram]",
]

[project.urls]
repository = "https://github.com/Pure-Peace/peace-performance-python"

[tool.pytest.ini_options]
markers = ["benchmark", "std_pp", "taiko_pp", "fruits_pp", "mania_pp"]
